; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/extr_skge.c_skge_tx_timeout.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/extr_skge.c_skge_tx_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.skge_port = type { i64, i32, i32 }

@timer = common dso_local global i32 0, align 4
@KERN_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"tx timeout\0A\00", align 1
@txqaddr = common dso_local global i32* null, align 8
@Q_CSR = common dso_local global i32 0, align 4
@CSR_STOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @skge_tx_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skge_tx_timeout(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.skge_port*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.skge_port* @netdev_priv(%struct.net_device* %4)
  store %struct.skge_port* %5, %struct.skge_port** %3, align 8
  %6 = load %struct.skge_port*, %struct.skge_port** %3, align 8
  %7 = load i32, i32* @timer, align 4
  %8 = load i32, i32* @KERN_DEBUG, align 4
  %9 = load %struct.skge_port*, %struct.skge_port** %3, align 8
  %10 = getelementptr inbounds %struct.skge_port, %struct.skge_port* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @netif_printk(%struct.skge_port* %6, i32 %7, i32 %8, i32 %11, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %13 = load %struct.skge_port*, %struct.skge_port** %3, align 8
  %14 = getelementptr inbounds %struct.skge_port, %struct.skge_port* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load i32*, i32** @txqaddr, align 8
  %17 = load %struct.skge_port*, %struct.skge_port** %3, align 8
  %18 = getelementptr inbounds %struct.skge_port, %struct.skge_port* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = getelementptr inbounds i32, i32* %16, i64 %19
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @Q_CSR, align 4
  %23 = call i32 @Q_ADDR(i32 %21, i32 %22)
  %24 = load i32, i32* @CSR_STOP, align 4
  %25 = call i32 @skge_write8(i32 %15, i32 %23, i32 %24)
  %26 = load %struct.net_device*, %struct.net_device** %2, align 8
  %27 = call i32 @skge_tx_clean(%struct.net_device* %26)
  %28 = load %struct.net_device*, %struct.net_device** %2, align 8
  %29 = call i32 @netif_wake_queue(%struct.net_device* %28)
  ret void
}

declare dso_local %struct.skge_port* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @netif_printk(%struct.skge_port*, i32, i32, i32, i8*) #1

declare dso_local i32 @skge_write8(i32, i32, i32) #1

declare dso_local i32 @Q_ADDR(i32, i32) #1

declare dso_local i32 @skge_tx_clean(%struct.net_device*) #1

declare dso_local i32 @netif_wake_queue(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
